--- a/templates/admin.html
+++ b/templates/admin.html
@@ -54,7 +54,7 @@
 
   <script>
     const token = localStorage.getItem('adminToken');
-    const BASE_URL = 'https://web-production-25adc.up.railway.app';
+    const BASE_URL = 'https://127.0.0.1:2110';
 
     if(!token){
       // redirect to login if not logged in
@@ -174,6 +174,7 @@
   </script>
 </body>
 </html>
+
 
 
 
