--- a/templates/loading.html
+++ b/templates/loading.html
@@ -59,7 +59,7 @@
 <body>
   <div class="loader-container">
     <div class="rotating-circle"></div>
-    <img src="/static/logo.png" alt="SCRS Logo" class="logo">
+    <img src="/static/images/CROPx.png" alt="SCRS Logo" class="logo">
   </div>
   <div class="loading-text">
     SMART CROP RECOMMENDATION SYSTEM...
@@ -72,4 +72,5 @@
     }, 4000); // Adjust time (ms) based on backend wake-up
   </script>
 </body>
+
 </html>
