--- a/templates/loading.html
+++ b/templates/loading.html
@@ -68,10 +68,11 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "/dashboard"; // Change this to your actual route
+      window.location.href = "/main"; // Change this to your actual route
     }, 20000); // Adjust time (ms) based on backend wake-up
   </script>
 </body>
 
 </html>
+
 
