--- a/templates/loading.html
+++ b/templates/loading.html
@@ -68,11 +68,12 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "/main"; // Change this to your actual route
-    }, 20000); // Adjust time (ms) based on backend wake-up
+      window.location.href = "/main";
+    }, 4000);
   </script>
 </body>
 
 </html>
+
 
 
