--- a/templates/loading.html
+++ b/templates/loading.html
@@ -68,12 +68,13 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "/main";
+      window.location.href = "/smart_crop_system_main.html";
     }, 4000);
   </script>
 </body>
 
 </html>
+
 
 
 
