--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -152,7 +152,7 @@
             </div>
             <hr>
 <!-- <h5>Disease Risk Prediction (Optional)</h5> -->
-<!-- 
+
 <div class="mb-3">
     <label for="cropType" class="form-label">Crop Type</label>
     <select id="cropType" class="form-select">
@@ -167,7 +167,7 @@
 <div class="mb-3">
     <label for="leafImage" class="form-label">Upload Leaf Image</label>
     <input type="file" class="form-control" id="leafImage" accept="image/*">
-</div> -->
+</div> 
 
             <button type="submit" class="btn btn-success w-100" id="btnPredict">Recommend Crop</button>
         </form>
