--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -14,6 +14,13 @@
           background-attachment: fixed !important;
           color: #fff !important;
         }
+        .btn-success {
+              background: linear-gradient(90deg,#39b54a,#1d8f2a) !important;   <-- BUTTON COLOR
+              border: none !important;
+              color: #fff !important;
+              font-weight:700;
+        }
+
 
         body::before {
           content: "" !important;
@@ -580,5 +587,6 @@ try {
     </script>
 </body>
 </html>
+
 
 
