--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -78,8 +78,8 @@
             object-fit: cover;
         }
         .form-control, .form-select {
-            background: rgba(255,255,255,0.04) !important;
-            color: #fff !important;  
+            background: #004080 !important;
+            color: #ffffff !important;  
         } 
         .form-control::placeholder {
               color: rgba(255,255,255,0.6) !important;   <-- THIS sets placeholder color
@@ -587,6 +587,7 @@ try {
     </script>
 </body>
 </html>
+
 
 
 
