--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -78,7 +78,7 @@
             object-fit: cover;
         }
         .form-control, .form-select {
-            background: #004080 !important;
+            background: rgba(0,64,128,0.8); !important;
             color: #ffffff !important;  
         } 
         .form-control::placeholder {
@@ -587,6 +587,7 @@ try {
     </script>
 </body>
 </html>
+
 
 
 
