--- a/templates/smart_crop_system_info.html
+++ b/templates/smart_crop_system_info.html
@@ -84,6 +84,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                            <a class="nav-link" href="https://pmkisan.gov.in/" target="_blank">
+                                    <img src="/static/images/pmkisan-logo.png" alt="PM-Kisan" style="height:30px;">
+                            </a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main_page')}}">Info</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main_page')}}#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main_page')}}#contact">Contact</a></li>
@@ -119,3 +124,4 @@
     </div>
 </body>
 </html>
+
