--- a/templates/smart_crop_system_info.html
+++ b/templates/smart_crop_system_info.html
@@ -86,7 +86,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                             <a class="nav-link" href="https://pmkisan.gov.in/" target="_blank">
-                                    <img src="/static/images/pmkisan-logo.png" alt="PM-Kisan" style="height:30px;">
+                                    <img src="{{url_for(url_for('static', filename='images/pmkisan-logo.png') )}}" alt="PM-Kisan" style="height:30px;">
                             </a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main_page')}}">Info</a></li>
@@ -124,4 +124,5 @@
     </div>
 </body>
 </html>
+
 
