--- a/templates/smart_crop_recommendation.html
+++ b/templates/smart_crop_recommendation.html
@@ -49,6 +49,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                     <!-- PM-Kisan Logo Link -->
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link p-0" href="https://pmkisan.gov.in/" target="_blank" rel="noopener noreferrer">
+                            <img src="{{url_for('static', filename='images/pmkisan-logo.png')}}" alt="PM-Kisan" style="height:30px;">
+                        </a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main')}}">Info</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main')}}#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{url_for('main')}}#contact">Contact</a></li>
@@ -122,6 +128,7 @@
     </script>
 </body>
 </html>
+
 
 
 
