--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Register - CropX</title>
+  <title><img src="{{ url_for('static', filename='images/CROPx.png') }}" alt="CROPx Logo" style="width:40px;height:40px;border-radius:8px;margin-right:10px;object-fit:cover;" />Register - CropX</title>
   <link rel="manifest" href="/manifest.json">
 
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -201,4 +201,5 @@
   </script>
 </body>
 </html>
+
 
